--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,39 @@
-<div class="container-fluid container-verically-centered">
-    <div class="row">
+<div class="row">
+    <div class="col-6">
         <div class="div-verically-centered">
             <div class="offset-1 col-5">
-                <h1 class="typewriter">Hi, my name is <span class="text-primary">Antonio Gundermann</span></h1>
-                <h2 class="fade-in">I'm a <span class="text-primary">Software Developer</span></h2>
-                <h3>
-                    <span class="text-primary">passionate</span>
-                    about <span class="text-primary">technology</span> and
-                    <span class="text-primary">innovation</span>
-                </h3>
-                <h5>
-                    I love to <span class="text-primary">create</span> 
-                    solutions and <span class="text-primary">learn</span> from others
-                </h5>
+                <div class="textWriterWrapper">
+                    <div>
+                        <h1 class="textWriter">Hi, my name is <span class="text-primary">Antonio Gundermann</span></h1>
+                    </div>
+                    <div>
+                        <h2 class="textWriter">I'm a <span class="text-primary">Software Developer</span></h2>
+                    </div>
+                    <div>
+                        <h3 class="textWriter">
+                            <span class="text-primary">passionate</span>
+                            about <span class="text-primary">technology</span> and
+                            <span class="text-primary">innovation</span>
+                        </h3>
+                    </div>
+                    <div>
+                        <h5 class="textWriter">
+                            I love to <span class="text-primary">create</span>
+                            solutions and <span class="text-primary">learn</span> from others
+                        </h5>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+    <div class="col-4">
+        <!-- TODO: PHOTO OR SOMETHING SKETCHY -->
+    </div>
+    <div class="col-2">
+        <div class="div-verically-centered">
+            <a routerLink="/experience" class="btn next-button">
+                <fa-icon class="next-button-icon" [icon]="faArrowRightLong"></fa-icon>
+            </a>
         </div>
     </div>
 </div>
