--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,42 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/scss/bootstrap";
+
+:root {
+  --bs-body-bg: #000000;
+  --bs-body-color: #eeeeee;
+  --bs-primary: #00adb5;
+  --bs-body-font-size: 1.5rem;
+  --bs-body-font-weight: 600;
+}
+
+.container-vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+}
+
+.div-verically-centered {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.next-button {
+  background-color: black;
+  color: white;
+  border: 2px solid #ccc;
+  animation: showText 5s;
+  font-size: 50px;
+  padding: 0px 15px 0px 15px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #00adb5;
+    color: black;
+  }
+}
+
+.next-button-icon {
+  font-size: 50px;
+}
