--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="container-vertical-center">
-            <div [@routeAnimations]="getRouteAnimationData()" >
-                <router-outlet></router-outlet>
-            </div>
+        <div class="mt-2"></div>
+        <div [@routeAnimations]="getRouteAnimationData()">
+            <router-outlet></router-outlet>
         </div>
+        <div class="mb-2"></div>
     </div>
 </div>
